# args

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/args/: actions.hpp  api.hpp  argparser.hpp  parser.hpp  printer.hpp  sys.hpp  translator.hpp
src/: actions.cpp  argparser.cpp  parser.cpp  printer.cpp  sys.cpp  translator.cpp  version.in
tests/: args-test.cpp  args-test.py  minimal-args  unexpected-arg-value  unknown-arg
